--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1790,7 +1790,7 @@ input, select, textarea {
 		font-weight: 700;
 		text-transform: uppercase;
 		text-decoration: none;
-		background: #b1ddab;
+		background: #3671c9;
 		color: #fff;
 		border: 0;
 		line-height: 1em;
@@ -1812,7 +1812,7 @@ input, select, textarea {
 		input[type="reset"]:hover,
 		button:hover,
 		.button:hover {
-			background: #c1edbb;
+			background: #9bd493;
 		}
 
 		input[type="button"]:active,
