--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2218,6 +2218,12 @@ input, select, textarea {
 		margin: 0 0 0.25em 0;
 	}
 
+	.box.post h4 {
+		font-size: 250%;
+		margin: 0 0 0.25em 0;
+		text-align: center;
+	}
+
 	.box.post header > p {
 		font-size: 1.65em;
 		margin: 0 0 0.5em 0;
@@ -2252,7 +2258,7 @@ input, select, textarea {
 		border-top: solid 5px #e7eae8;
 		padding: 10px;
 		border-bottom: solid 5px #e7eae8;
-		font-size: 200%;
+		font-size: 300%;
 	}
 
 	.box.page-content header > p {
@@ -2363,6 +2369,7 @@ input, select, textarea {
 		text-align: center;
 		font-family: 'Open Sans Condensed', sans-serif;
 		font-weight: 700;
+		font-size: large;
 		text-transform: uppercase;
 		cursor: default;
 	}
