--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -72,6 +72,20 @@ input, select, textarea {
 	appearance: none;
 }
 
+.modal {
+	display: block; /* Hidden by default */
+	position: fixed; /* Stay in place */
+	z-index: 1; /* Sit on top */
+	padding-top: 100px; /* Location of the box */
+	left: 0;
+	top: 0;
+	width: 100%; /* Full width */
+	height: 100%; /* Full height */
+	overflow: auto; /* Enable scroll if needed */
+	background-color: rgb(0, 0, 0); /* Fallback color */
+	background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+  }
+  
 /* Basic */
 	html {
 		box-sizing: border-box;
