--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -225,6 +225,37 @@ input, select, textarea {
 		color: #c1cac5;
 	}
 
+/* Discussion */
+table.research {
+	border: 3px solid;
+	float: left;
+}
+
+table.research td {
+	text-align: center;
+	padding: 1em 1em;
+	border-right: 3px solid;
+	border-left: 3px solid;
+}
+
+table.research th {
+	text-align: center;
+	padding-top: 10px;
+	padding-bottom: -1em;
+	padding-left: 1em;
+	padding-right: 1em;
+	border: 3px solid;
+	border-bottom: 1px solid;
+	width:50%;
+
+	/* font-family: 'Candara', sans-serif; */
+	font-family: 'PTSansRegular', sans-serif;
+	/* font-weight: 1000; */
+	font-size: 150%;
+	margin: 0 0 0.5em 0;
+	line-height: 1.3;
+}
+
 /* Container */
 
 	.container {
