--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -51,6 +51,12 @@ table {
 	border-spacing: 0;
 }
 
+th, td {
+	text-align: left;
+	padding: 8px;
+	/* border: 1px solid #ddd; */
+}
+
 body {
 	-webkit-text-size-adjust: none;
 }
@@ -3163,3 +3169,4 @@ table.research th {
 			}
 
 	}
+
